--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "dingo/api": "2.0.0-alpha1",
+        "barryvdh/laravel-ide-helper": "^2.4",
+        "dingo/api": "2.0.0-alpha2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "overtrue/easy-sms": "^1.1"
+        "overtrue/easy-sms": "^1.1",
+        "propaganistas/laravel-phone": "^4.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
