--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "liyu/dingo-serializer-switch": "^0.3.0",
         "overtrue/easy-sms": "^1.1",
-        "propaganistas/laravel-phone": "^4.0"
+        "propaganistas/laravel-phone": "^4.0",
+        "tymon/jwt-auth": "^1.0.0-beta.3@dev"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
