--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-ide-helper": "^2.4",
         "dingo/api": "2.0.0-alpha2",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "liyu/dingo-serializer-switch": "^0.3.0",
