--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-ide-helper": "^2.4",
+        "cmgmyr/messenger": "^2.16",
         "dingo/api": "2.0.0-alpha2",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
