--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
+        "laravel/horizon": "~1.0",
         "laravel/tinker": "^1.0",
         "liyu/dingo-serializer-switch": "^0.3.0",
         "overtrue/easy-sms": "^1.1",
+        "predis/predis": "~1.0",
         "propaganistas/laravel-phone": "^4.0",
         "tymon/jwt-auth": "^1.0.0-beta.3@dev"
     },
