--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "barryvdh/laravel-ide-helper": "^2.4",
         "cmgmyr/messenger": "^2.16",
         "dingo/api": "2.0.0-alpha2",
-        "encore/laravel-admin": "^1.5.19",
+        "encore/laravel-admin": "1.5.19",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
